--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="parent">
+		<div class="child3">3</div>
+		<div class="child1">1</div>
+		<div class="child2">2</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
