--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="parent">
+	<div class="holder">
 		<div class="child3">3</div>
 		<div class="child1">1</div>
 		<div class="child2">2</div>
